blockml/test/valid/10_wherecalc_refs_mea/v24/v24d.dashboard
dashboard: v24d
title: 'sales'
reports:
- title: 'weekly'
  model: v24m
  select:
  - a.dim6
  type: 'table'
