blockml/test/errors/12_chart/e207/e207d.dashboard
dashboard: e207d
title: 'sales'
reports:
- title: 'overview'
  select:
  - a.dim1
  model: e207m
  type: 'line'
  data:
    x_field: a.dim1
    y_fields: a.dim1  


